--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
     <script src="atomshape.js" type="text/javascript"></script>
+    <script src="cog.js" type="text/javascript"></script>
 
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
