--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="atomshape.js" type="text/javascript"></script>
     <script src="cog.js" type="text/javascript"></script>
+    <script src="gears.js" type="text/javascript"></script>
+
 
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
