--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="atomshape.js" type="text/javascript"></script>
     <script src="cog.js" type="text/javascript"></script>
-    <script src="gears.js" type="text/javascript"></script>
+    <script src="gear.js" type="text/javascript"></script>
 
 
 
